# enterprise-architectures-and-patterns

./: .gitignore  README.md
.github/workflows/: ci.yaml
aggregate-pattern/: README.md  migrations.sql
aggregate-pattern/aggregates-service/: Cargo.toml
aggregate-pattern/aggregates-service/src/: handlers.rs  lib.rs  models.rs  request_builder.rs  response_parser.rs
aggregate-pattern/customers-service/: package-lock.json  package.json
aggregate-pattern/incidents-service/: go.mod  main.go
aggregation-pattern/: spin.toml
aggregation-pattern/aggregates-service/: Cargo.toml
aggregation-pattern/aggregates-service/src/: config.rs
aggregation-pattern/customers-service/: package.json
aggregation-pattern/customers-service/src/: api.ts  handlers.ts  index.ts  models.ts
api-with-cronjob/: README.md  local.rtc.toml  spin-cron.toml  spin.toml
api-with-cronjob/api/: Cargo.toml
api-with-cronjob/api/src/: lib.rs  models.rs
api-with-cronjob/cronjob/: Cargo.toml
api-with-cronjob/cronjob/src/: bindings.rs  main.rs
api-with-cronjob/k8s/: deploy.sh  k8s.rtc.tmpl  spin-app.tmpl  spin-cron.tmpl
application-variable-providers/: README.md
application-variable-providers/azure-key-vault-provider/: Cargo.toml  README.md  spin.toml
application-variable-providers/azure-key-vault-provider/src/: lib.rs
application-variable-providers/vault-provider/: Cargo.toml  spin.toml
caching-rust/: Cargo.toml  README.md  local.toml  migration.sql  spin.toml
caching-rust/src/: cache.rs  db.rs  lib.rs  model.rs
content-negotiation-rust/: Cargo.toml  README.md  spin.toml
content-negotiation-rust/src/: content_negotiation.rs  lib.rs  models.rs  service.rs
cors-rust/: Cargo.toml  README.md  migrations.sql  spin.toml
cors-rust/src/: cors.rs  lib.rs  models.rs
cqrs-go/: README.md  go.mod  go.sum  main.go  migration.sql  migrations.sql  spin.toml  tests.restbook
cqrs-go/pkg/api/: api.go  handlers.go
cqrs-go/pkg/commands/: commands.go
cqrs-go/pkg/queries/: queries.go
cqrs-rust/: Cargo.toml  README.md  local.toml  spin.toml  tests.restbook
cqrs-rust/commands/: Cargo.toml
cqrs-rust/commands/src/: lib.rs
cqrs-rust/crates/commands/: Cargo.toml
cqrs-rust/crates/commands/src/: lib.rs  models.rs
cqrs-rust/crates/queries/: Cargo.toml
cqrs-rust/crates/queries/src/: lib.rs  models.rs
cqrs-rust/queries/: Cargo.toml
cqrs-rust/queries/src/: lib.rs  models.rs
cqrs-rust/src/: lib.rs
cqrs-servicechaining/: README.md  migrations.sql  spin.toml
cqrs-servicechaining/commands/: Cargo.toml
cqrs-servicechaining/commands/src/: lib.rs  persistence.rs
cqrs-servicechaining/gateway/: Cargo.toml
cqrs-servicechaining/gateway/src/: lib.rs
cqrs-servicechaining/queries/: go.mod  main.go
distributed-todo-app/: README.md  distribute-apps.sh  run-cron-local.sh  run-local.sh
distributed-todo-app/kubernetes/: api.yaml  db.yaml  migrations.yaml  stats-generator.yaml
distributed-todo-app/src/http-api/: Cargo.toml  spin.toml
distributed-todo-app/src/http-api/src/: handlers.rs  lib.rs  models.rs
distributed-todo-app/src/migrations/: Cargo.toml  spin.toml
distributed-todo-app/src/migrations/scripts/: 01-init.sql  02-sample-data.sql
distributed-todo-app/src/migrations/src/: main.rs
distributed-todo-app/src/stats-generator/: Cargo.toml  spin.toml
distributed-todo-app/src/stats-generator/src/: main.rs
distributed-tracing/: Cargo.toml  Makefile  README.md  spin.toml
distributed-tracing/src/: lib.rs
http-crud-go-sqlite/: README.md  go.mod  go.sum  main.go  spin.toml
http-crud-go-sqlite/pkg/api/: api.go  handlers.go
http-crud-js/: postgres.Dockerfile  spin.toml
http-crud-js-pg/: .gitignore  Makefile  README.md  package-lock.json  package.json  spin.toml  webpack.config.js
http-crud-js-pg/src/: config.js  handlers.js  index.js
http-crud-js-sqlite/: README.md  knitwit.json  local.toml  migrations.sql  package-lock.json  package.json  spin.toml
http-crud-js-sqlite/src/: handlers.js  index.js  seed.js  spin.js
http-crud-js/scripts/pg/: init.sh  (+1 more)
http-crud-js/src/: handlers.js  index.js
http-crud-rust-mysql/: Cargo.toml  Dockerfile  Makefile  README.md  spin.toml
http-crud-rust-mysql/scripts/mysql/: entrypoint.sh  init.sql
http-crud-rust-mysql/src/: api.rs  handlers.rs  lib.rs  models.rs  persistence.rs
image-transformation/: README.md  spin.toml
image-transformation/api/: Cargo.toml
image-transformation/api/src/: helpers.rs  lib.rs
image-transformation/frontend/: app.js  index.html
load-testing-spin-with-k6/: README.md  breakpoint-test.js  smoke-test.js  stress-test.js
load-testing-spin-with-k6/scenario/: Cargo.toml  spin.toml
load-testing-spin-with-k6/scenario/src/: lib.rs
long-running-jobs-over-http/: Makefile  README.md
long-running-jobs-over-http/api/: Cargo.toml  local.toml  migrations.sql  spin.toml
long-running-jobs-over-http/api/src/: config.rs  handlers.rs  lib.rs  models.rs  service.rs
long-running-jobs-over-http/data/: .gitignore
long-running-jobs-over-http/mosquitto/: mosquitto.conf
long-running-jobs-over-http/native-worker/: go.mod  go.sum  main.go
long-running-jobs-over-http/shared/: Cargo.toml
long-running-jobs-over-http/spin-worker/: Cargo.toml  spin.toml
long-running-jobs-over-http/spin-worker/src/: lib.rs  status_reporter.rs
pub-sub-polyglot/: Makefile  README.md
pub-sub-polyglot/http-publisher-js/: README.md  package-lock.json  package.json  spin.toml
pub-sub-polyglot/mass-publisher/: Cargo.toml
pub-sub-polyglot/subscriber-go/: go.mod  main.go  spin.toml
pub-sub-polyglot/subscriber-rust/: Cargo.toml  spin.toml
signed-webhooks/: Makefile  README.md
signed-webhooks/hmac/: Cargo.toml  Makefile
signed-webhooks/hmac/src/: bindings.rs  lib.rs
signed-webhooks/hmac/wit/: world.wit
signed-webhooks/webhook-consumer/: .gitignore  Makefile  app.py  requirements.txt  spin.toml
signed-webhooks/webhook-producer/: .gitignore  Cargo.toml  Makefile  migrations.sql  spin.toml
signed-webhooks/webhook-producer/src/: bindings.rs  lib.rs  registrations.rs
signed-webhooks/webhook-producer/wit/: world.wit
(+13 files in other folders)
