[package]
name = "content-negotiation-rust"
authors = ["Fermyon Engineering <engineering@fermyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0.197", features = ["derive"] }
quick-xml = { version = "0.31", features = ["serialize"] }

serde_json = "1.0.114"
serde_yaml = "0.9.32"
spin-sdk = "3.0.0"

[workspace]
