[package]
name = "cors-rust"
authors = ["Thorsten Hans <thorsten.hans@fermyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = { version = "2.2.0", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
http = "1.1.0"
[workspace]
