[package]
name = "cqrs-rust"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[workspace.package]
version = "0.1.0"
authors = ["Fermyon Engineering <engineering@fermyon.com>"]
edition = "2021"
rust-version = "1.75"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
spin-sdk = { workspace = true }
serde_json = "1"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
cqrs-commands = { path = "crates/commands" }
cqrs-queries = { path = "crates/queries" }

[workspace]
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
spin-sdk = "3.0.1"
