[package]
name = "http-crud-rust-mysql"
authors = ["Fermyon Engineering <engineering@fermyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
spin-sdk = "3.0.0"
uuid = { version = "1.8.0", features = ["v4"] }

[workspace]
