[package]
name = "aggregates-service"
authors = ["Fermyon Engineering <engineering@fermyon.com>"]
description = "Aggregates Service"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4.37", features = ["serde"] }
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
spin-sdk = "3.0.0"

[workspace]
