[package]
name = "cronjob"
authors = ["Fermyon Engineering <engineering@fermyon.com>"]
version = "0.1.0"
edition = "2021"

[package.metadata.component]
package = "component:cronjob"

[package.metadata.component.dependencies]

[dependencies]
anyhow = "1.0.86"
spin-sdk = "3.0.1"
wit-bindgen-rt = { version = "0.26.0", features = ["bitflags"] }
