[package]
name = "vault-provider"
authors = ["Fermyon Engineering <engineering@fermyon.com>"]
description = "Vault Application Variable Provider Example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "3.0.1"
constant_time_eq = "0.3.0"

[workspace]
