[package]
name = "commands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
serde = { version = "1.0.197", features = ["derive"] }
spin-sdk = "2.2.0"
uuid = { version = "1.7.0", features = ["v4"] }
