[package]
name = "commands"
authors = ["Thorsten Hans <thorsten.hans@fermyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
spin-sdk = "3.0.1"
uuid = { version = "1.8.0", features = ["v4"] }

[workspace]
