[package]
name = "worker"
authors = ["Fermyon Engineering <engineering@fermyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
chrono = "*"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
spin-mqtt-sdk = { git = "https://github.com/spinkube/spin-trigger-mqtt" }
spin-sdk = "3.0.1"
shared = { path = "../shared" }
