[package]
name = "hmac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.5.0"
rand = "0.8.5"
ring = "0.17.8"
wit-bindgen = { version = "0.24.0", default-features = false, features = [
    "realloc",
] }

wit-bindgen-rt = "0.24.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "fermyon:hmac"

[package.metadata.component.dependencies]
