[package]
name = "webhook-producer"
authors = ["Fermyon Engineering <engineering@fermyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spin-sdk = "3.0.1"
wit-bindgen = "0.24.0"
wit-bindgen-rt = "0.24.0"

[workspace]

[package.metadata.component]
package = "fermyon:webhooks-producer"

[package.metadata.component.target.dependencies]
"fermyon:hmac" = { path = "../hmac/wit" }
