[package]
name = "cqrs-commands"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
spin-sdk = { workspace = true }
uuid = { version = "1.7.0", features = ["v4"] }
