[package]
name = "http-api"
authors = ["Fermyon Engineering <engineering@fermyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.92"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
spin-sdk = "3.0.1"
uuid = { version = "1.11.0", features = ["serde", "v4"] }

[workspace]
